--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -16,91 +17,144 @@
 
 <body>
 
+  <nav>
+    <a href="./services.html">Services</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </nav>
 
-Services
-Product
-Vision
-Features
-About
-Contact
+  <header class="services-header">
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
+    <h1>Services</h1>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+    <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus
+      rutrum,
+      accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo
+      eu
+      consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+  </header>
 
-Services
+  <div class="services-container">
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+    <section class="services-excerpt">
 
+      <h2>Digital Design</h2>
 
-Digital Design
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <button>Learn More</button>
 
-Learn More
+    </section>
 
+    <section class="services-excerpt">
 
+      <h2>UX / UI</h2>
 
-UX / UI
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque,
+        sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <button>Learn More</button>
+    </section>
 
-Learn More
+    <section class="services-excerpt">
 
+      <h2>Digital Marketing</h2>
 
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
-Digital Marketing
+      <button>Learn More</button>
+    </section>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    <section class="services-excerpt">
 
-Learn More
+      <h2>Web Development</h2>
 
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
+      <button>Learn More</button>
 
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    </section>
 
 
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
+    <section class="services-excerpt">
 
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+      <h2>iOS Development</h2>
 
-Copyright Great Idea! 2018
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+
+      <button>Learn More</button>
+    </section>
+
+    <section class="services-excerpt">
+
+      <h2>Android Development</h2>
+
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+
+      <button>Learn More</button>
+    </section>
+
+  </div>
+
+  <section class="facts-section">
+
+    <div class="facts-content">
+
+      <h2>Some Facts About Our Services</h2>
+
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+
+      <ul>
+        <li>Awesome thing</li>
+        <li>Amazing thing</li>
+        <li>Cool thing</li>
+        <li>Great thing</li>
+      </ul>
+    </div>
+
+    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+
+  </section>
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
 
 </body>
 
